<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="horizontal" android:background="@drawable/setting_account_listview_header" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:gravity="right" android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="15.0dip" android:layout_weight="1.0">
        <TextView android:textSize="16.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:textColor="@color/white" android:text="@string/total_asset" />
        <TextView android:textSize="18.0dip" android:textColor="#ffffffff" android:id="@+id/asset_amount_tv" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/in_calculating" />
    </LinearLayout>
    <LinearLayout android:gravity="right" android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="15.0dip" android:layout_weight="1.0">
        <TextView android:textSize="16.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:textColor="@color/white" android:text="@string/total_debt" />
        <TextView android:textSize="18.0dip" android:textColor="#ffffffff" android:id="@+id/liabilitiy_amount_tv" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/in_calculating" />
    </LinearLayout>
</LinearLayout>